[package]
authors = ["Inflation <hypernovagama@gmail.com>"]
description = "Rust wrapper for JPEG XL reference implementation"
edition = "2018"
exclude = ["test/"]
license = "GPL-3.0-or-later"
name = "jpegxl-sys"
readme = "README.md"
repository = "https://github.com/inflation/jpegxl-sys"
version = "0.2.4-alpha.0"

[package.metadata.docs.rs]
features = ["docsrs"]
no-default-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.56"
cmake = "0.1.45"

[dev-dependencies]
image = "0.23.12"

[features]
default = []
docsrs = []
without-build = []
without-threads = []
